<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/edit_text_title"
        android:layout_margin="@dimen/margin_padding_tiny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:padding="@dimen/margin_padding_tiny"
        android:gravity="left"
        android:singleLine="true"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edit_text_note"
        android:layout_margin="@dimen/margin_padding_tiny"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:hint="@string/enter_content"
        android:layout_height="5dp"
        android:padding="@dimen/margin_padding_tiny"
        android:gravity="top"

        android:inputType="textMultiLine"/>


</fragment>